# game

./: .gitignore  CMakeLists.txt  README.md  cube.blend  cube.dds  imgui.ini
dependencies/: glew.cmake  glfw.cmake
src/game/: CMakeLists.txt  file.h  logger.cpp  logger.h  main.cpp
src/game/renderer/: controls.cpp  controls.h  mesh.cpp  mesh.h  program.cpp  shader.cpp  shader.h  texture.cpp  texture.h  vao.cpp  vao.h  window_callbacks.cpp  window_callbacks.h
